Added in an alarm to refresh foods and macros for a new day.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.macromanager.macromanagerandroid">
 
+    <uses-permission android:name="android.permission.SET_ALARM" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -16,10 +19,23 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".macroCalculatorActivity" />
         <activity android:name=".SettingsActivity" />
         <activity android:name=".CalculatorActivity" />
-        <activity android:name=".AddMealActivity"></activity>
+        <activity android:name=".AddMealActivity" />
+
+        <receiver android:name=".DailyResetAlarmReciever">
+
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+            </intent-filter>
+        </receiver>
+
+        <receiver android:name=".DeviceRebootDailyResetAlarmReceiver"
+        android:enabled="false">
+        <intent-filter>
+            <action android:name="android.intent.action.BOOT_COMPLETED"/>
+        </intent-filter>
+    </receiver>
     </application>
 
 </manifest>
