Created an alert to ask a user if they want to sign up.

--- a/MacrosManager/app/src/main/AndroidManifest.xml
+++ b/MacrosManager/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.cuinsolutions.macrosmanager">
 
     <uses-permission android:name="android.permission.SET_ALARM" />
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
         android:allowBackup="true"
@@ -24,18 +24,19 @@
         <activity android:name=".AddMealActivity" />
 
         <receiver android:name=".DailyResetAlarmReciever">
-
             <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+        <receiver
+            android:name=".DeviceRebootDailyResetAlarmReceiver"
+            android:enabled="false">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
 
-        <receiver android:name=".DeviceRebootDailyResetAlarmReceiver"
-        android:enabled="false">
-        <intent-filter>
-            <action android:name="android.intent.action.BOOT_COMPLETED"/>
-        </intent-filter>
-    </receiver>
+        <activity android:name=".SignUpActivity"></activity>
     </application>
 
 </manifest>
