--- a/MacrosManager/app/build.gradle
+++ b/MacrosManager/app/build.gradle
@@ -23,17 +23,23 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+
     implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:animated-vector-drawable:27.1.1'
+    implementation 'com.android.support:customtabs:27.1.1'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation 'com.android.support:support-core-utils:27.1.1'
+    implementation 'com.google.firebase:firebase-firestore:15.0.0'
     implementation 'joda-time:joda-time:2.9.9'
     implementation 'com.google.android.gms:play-services-ads:15.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'com.google.firebase:firebase-auth:15.0.0'
 }
 repositories {
     mavenCentral()
 }
 
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'com.google.gms.google-services'
