--- a/MacrosManager/app/build.gradle
+++ b/MacrosManager/app/build.gradle
@@ -30,12 +30,13 @@ dependencies {
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation 'com.android.support:support-core-utils:27.1.1'
-    implementation 'com.google.firebase:firebase-firestore:16.0.0'
+    implementation 'com.google.firebase:firebase-firestore:17.0.1'
     implementation 'joda-time:joda-time:2.9.9'
     implementation 'com.google.android.gms:play-services-ads:15.0.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'com.google.firebase:firebase-auth:15.1.0'
+    implementation 'com.google.firebase:firebase-auth:16.0.1'
+    implementation 'com.google.code.gson:gson:2.8.4'
 }
 repositories {
     mavenCentral()
