--- a/MacrosManager/app/build.gradle
+++ b/MacrosManager/app/build.gradle
@@ -8,7 +8,7 @@ android {
         applicationId "com.cuinsolutions.macrosmanager"
         minSdkVersion 21
         targetSdkVersion 27
-        versionCode 5
+        versionCode 8
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -28,15 +28,16 @@ dependencies {
     implementation 'com.android.support:animated-vector-drawable:27.1.1'
     implementation 'com.android.support:customtabs:27.1.1'
     implementation 'com.android.support:design:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation 'com.android.support:support-core-utils:27.1.1'
-    implementation 'com.google.firebase:firebase-firestore:17.0.1'
+    implementation 'com.google.firebase:firebase-firestore:17.0.2'
     implementation 'joda-time:joda-time:2.9.9'
     implementation 'com.google.android.gms:play-services-ads:15.0.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'com.google.firebase:firebase-auth:16.0.1'
-    implementation 'com.google.code.gson:gson:2.8.4'
+    implementation 'com.google.firebase:firebase-auth:16.0.2'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.google.firebase:firebase-ads:15.0.1'
 }
 repositories {
     mavenCentral()
