--- a/MacrosManager/gradle/libs.versions.toml
+++ b/MacrosManager/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
-activityCompose = "1.9.1"
-androidGradlePlugin = "8.5.2"
-composeBom = "2024.08.00"
+activityCompose = "1.9.2"
+androidGradlePlugin = "8.6.1"
+composeBom = "2024.09.02"
 coreKtx = "1.13.1"
 datastore = "1.1.1"
 espressoCore = "3.6.1"
@@ -11,15 +11,16 @@ junit = "4.13.2"
 junitVersion = "1.2.1"
 kotlin = "2.0.0"
 ksp = "2.0.0-1.0.22"
-lifecycleRuntimeKtx = "2.8.4"
-navigationCompose = "2.7.7"
-navigationUiKtx = "2.7.7"
+lifecycleRuntimeKtx = "2.8.6"
+navigationCompose = "2.8.1"
+navigationUiKtx = "2.8.1"
 playServicesAds = "23.3.0"
-lifecycleRuntimeComposeAndroid = "2.8.4"
+lifecycleRuntimeComposeAndroid = "2.8.6"
 gson = "2.11.0"
 firebase = "33.3.0"
 firebaseAuth = "23.0.0"
 firestore = "25.1.0"
+monthYearCalendar = "1.1.1"
 
 [libraries]
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activityCompose" }
@@ -32,6 +33,7 @@ androidx-junit = { module = "androidx.test.ext:junit", version.ref = "junitVersi
 androidx-lifecycle-runtime-ktx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
 androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycleRuntimeKtx" }
 androidx-material3 = { module = "androidx.compose.material3:material3" }
+androidx-material = { module = "androidx.compose.material:material" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
 androidx-navigation-ui-ktx = { module = "androidx.navigation:navigation-ui-ktx", version.ref = "navigationUiKtx" }
 androidx-ui = { module = "androidx.compose.ui:ui" }
@@ -49,6 +51,7 @@ gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebase" }
 firebase-auth = { module = "com.google.firebase:firebase-auth-ktx", version.ref = "firebaseAuth" }
 firestore = { module = "com.google.firebase:firebase-firestore-ktx", version.ref = "firestore" }
+month-year-calendar = { module = "com.github.DogusTeknoloji:compose-date-picker", version.ref = "monthYearCalendar" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "androidGradlePlugin" }
